implementação do ponto de partida da Viagem.